<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpeedySpoon</string>
    <string name="app_logo">SpeedySpoon Logo</string>

    <!-- Regisztráció és bejelentkezés -->
    <string name="register_title">Regisztráció</string>
    <string name="login_title">Bejelentkezés</string>
    <string name="hint_name">Teljes név</string>
    <string name="hint_email">Email cím</string>
    <string name="hint_password">Jelszó</string>
    <string name="btn_register">Regisztráció</string>
    <string name="btn_login">Bejelentkezés</string>
    <string name="already_have_account">Már van fiókod? Jelentkezz be!</string>
    <string name="no_account_yet">Még nincs fiókod? Regisztrálj most!</string>

    <!-- Profil szerkesztés -->
    <string name="profile_edit_title">Profil szerkesztése</string>
    <string name="change_photo">Profilkép módosítása</string>
    <string name="personal_info">Személyes adatok</string>
    <string name="delivery_address">Szállítási cím</string>
    <string name="hint_address">Cím (utca, házszám)</string>
    <string name="hint_city">Város</string>
    <string name="hint_phone">Telefonszám</string>
    <string name="btn_save">Mentés</string>

    <!-- Hibaüzenetek -->
    <string name="error_name_required">A név megadása kötelező</string>
    <string name="error_email_required">Az email cím megadása kötelező</string>
    <string name="error_invalid_email">Érvénytelen email cím</string>
    <string name="error_password_required">A jelszó megadása kötelező</string>
    <string name="error_password_too_short">A jelszó túl rövid (min. 6 karakter)</string>
    <string name="error_required_fields">A kötelező mezők kitöltése szükséges</string>

    <!-- Visszajelzések -->
    <string name="registration_success">Sikeres regisztráció!</string>
    <string name="login_success">Sikeres bejelentkezés!</string>
    <string name="profile_updated">A profil sikeresen frissítve!</string>

    <!-- Éttermek böngészése -->
    <string name="restaurants_title">Éttermek</string>
    <string name="search_hint">Keresés éttermek között…</string>
    <string name="filter_title">Szűrés</string>
    <string name="sort_by">Rendezés</string>
    <string name="filter_by">Szűrés</string>
    <string name="category_all">Összes</string>
    <string name="category_italian">Olasz</string>
    <string name="category_asian">Ázsiai</string>
    <string name="category_fast_food">Gyorsétterem</string>
    <string name="category_vegetarian">Vegetáriánus</string>
    <string name="category_dessert">Desszert</string>
    <string name="sort_rating">Értékelés</string>
    <string name="sort_distance">Távolság</string>
    <string name="sort_price">Ár</string>
    <string name="filter_price_range">Árkategória</string>
    <string name="filter_min_rating">Minimum értékelés</string>
    <string name="apply_filters">Szűrés alkalmazása</string>
    <string name="reset_filters">Alaphelyzet</string>
    <string name="open_now">Most nyitva</string>
    <string name="delivery_time">Kiszállítási idő: %1$d-%2$d perc</string>
    <string name="min_order">Minimum rendelés: %1$s Ft</string>
    <string name="rating_count">(%1$d értékelés)</string>
    <string name="restaurant_details">Étterem részletei</string>
    <string name="menu">Menü</string>
    <string name="reviews">Értékelések</string>
    <string name="info">Információk</string>
    <string name="opening_hours">Nyitvatartás</string>
    <string name="address">Cím</string>
    <string name="phone">Telefon</string>
    <string name="website">Weboldal</string>
    <string name="monday">Hétfő</string>
    <string name="tuesday">Kedd</string>
    <string name="wednesday">Szerda</string>
    <string name="thursday">Csütörtök</string>
    <string name="friday">Péntek</string>
    <string name="saturday">Szombat</string>
    <string name="sunday">Vasárnap</string>
    <string name="closed">Zárva</string>
    <string name="add_to_cart">Kosárba</string>

    <!-- Kosár és rendelés -->
    <string name="cart_title">Kosár</string>
    <string name="cart_empty">A kosarad üres</string>
    <string name="cart_empty_message">Böngéssz az éttermek között és adj hozzá ételeket a kosaradhoz</string>
    <string name="browse_restaurants">Éttermek böngészése</string>
    <string name="item_quantity">%1$d db</string>
    <string name="remove_item">Eltávolítás</string>
    <string name="subtotal">Részösszeg</string>
    <string name="delivery_fee">Kiszállítási díj</string>
    <string name="total">Összesen</string>
    <string name="checkout">Fizetés</string>
    <string name="continue_shopping">Vásárlás folytatása</string>
    <string name="order_summary">Rendelés összesítő</string>
    <string name="change_address">Cím módosítása</string>
    <string name="add_new_address">Új cím hozzáadása</string>
    <string name="payment_method">Fizetési mód</string>
    <string name="cash_on_delivery">Készpénzes fizetés</string>
    <string name="credit_card">Bankkártya</string>
    <string name="place_order">Rendelés leadása</string>
    <string name="order_placed">Rendelés leadva!</string>
    <string name="order_placed_message">A rendelésedet sikeresen rögzítettük. Kövesd nyomon a rendelésed állapotát!</string>
    <string name="track_order">Rendelés követése</string>
    <string name="my_orders">Rendeléseim</string>
    <string name="order_number">Rendelés #%1$s</string>
    <string name="order_date">Dátum: %1$s</string>
    <string name="order_status">Állapot: %1$s</string>
    <string name="order_total">Összesen: %1$s Ft</string>
    <string name="order_items">%1$d tétel</string>
    <string name="order_again">Újrarendelés</string>
    <string name="order_details">Rendelés részletei</string>
    <string name="status_pending">Feldolgozás alatt</string>
    <string name="status_delivering">Kiszállítás alatt</string>
    <string name="status_completed">Kiszállítva</string>
    <string name="status_cancelled">Törölve</string>
    <string name="estimated_delivery">Várható kiszállítás: %1$s</string>
    <string name="address_title">Címek kezelése</string>
    <string name="address_name">Cím neve (pl. Otthon, Munkahely)</string>
    <string name="address_street">Utca, házszám</string>
    <string name="address_city">Város</string>
    <string name="address_zip">Irányítószám</string>
    <string name="address_save">Cím mentése</string>
    <string name="address_delete">Cím törlése</string>
    <string name="address_set_default">Beállítás alapértelmezettként</string>
    <string name="address_default">Alapértelmezett</string>
    <string name="increase_quantity">Mennyiség növelése</string>
    <string name="decrease_quantity">Mennyiség csökkentése</string>
    <string name="address_edit">Szerkesztés</string>

    <!-- Kedvencek és személyre szabás -->
    <string name="favorites_title">Kedvencek</string>
    <string name="favorites_empty">Még nincsenek kedvenc éttermeid</string>
    <string name="favorites_empty_message">Jelölj meg éttermeket kedvencként a gyorsabb eléréshez</string>
    <string name="recommended_for_you">Ajánlott neked</string>
    <string name="based_on_previous_orders">Korábbi rendeléseid alapján</string>
    <string name="preferences_title">Étkezési preferenciák</string>
    <string name="preferences_subtitle">Válaszd ki az étkezési preferenciáidat, hogy személyre szabott ajánlatokat kapj</string>
    <string name="preference_vegetarian">Vegetáriánus</string>
    <string name="preference_vegan">Vegán</string>
    <string name="preference_gluten_free">Gluténmentes</string>
    <string name="preference_lactose_free">Laktózmentes</string>
    <string name="preference_low_carb">Alacsony szénhidráttartalmú</string>
    <string name="preference_spicy">Csípős</string>
    <string name="preference_save">Preferenciák mentése</string>
    <string name="preference_saved">Preferenciák sikeresen mentve!</string>
    <string name="add_to_favorites">Hozzáadás a kedvencekhez</string>
    <string name="remove_from_favorites">Eltávolítás a kedvencekből</string>
    <string name="you_might_like">Ezek is tetszhetnek</string>

    <!-- Étterem kezelés -->
    <string name="restaurant_dashboard">Étterem irányítópult</string>
    <string name="restaurant_profile">Étterem profil</string>
    <string name="restaurant_orders">Rendelések</string>
    <string name="restaurant_menu">Étlap</string>
    <string name="restaurant_settings">Beállítások</string>
    <string name="restaurant_statistics">Statisztikák</string>
    <string name="restaurant_online">Online</string>
    <string name="restaurant_offline">Offline</string>
    <string name="restaurant_status">Étterem állapota</string>
    <string name="restaurant_status_description">Ha offline állapotba kapcsolsz, az éttermed nem lesz elérhető a felhasználók számára</string>
    <string name="new_orders">Új rendelések</string>
    <string name="in_progress_orders">Folyamatban lévő rendelések</string>
    <string name="completed_orders">Teljesített rendelések</string>
    <string name="cancelled_orders">Törölt rendelések</string>
    <string name="accept_order">Rendelés elfogadása</string>
    <string name="reject_order">Rendelés elutasítása</string>
    <string name="mark_as_ready">Elkészült</string>
    <string name="mark_as_delivered">Kiszállítva</string>
    <string name="edit_profile">Profil szerkesztése</string>
    <string name="save_changes">Változtatások mentése</string>
    <string name="restaurant_name">Étterem neve</string>
    <string name="restaurant_description">Étterem leírása</string>
    <string name="restaurant_category">Kategória</string>
    <string name="restaurant_address">Cím</string>
    <string name="restaurant_phone">Telefonszám</string>
    <string name="restaurant_email">Email cím</string>
    <string name="restaurant_website">Weboldal</string>
    <string name="restaurant_opening_hours">Nyitvatartás</string>
    <string name="add_menu_item">Új étel hozzáadása</string>
    <string name="edit_menu_item">Étel szerkesztése</string>
    <string name="item_name">Étel neve</string>
    <string name="item_description">Étel leírása</string>
    <string name="item_price">Ár</string>
    <string name="item_category">Kategória</string>
    <string name="item_image">Kép</string>
    <string name="select_image">Kép kiválasztása</string>
    <string name="delete_item">Étel törlése</string>
    <string name="add_category">Új kategória</string>
    <string name="category_name">Kategória neve</string>
    <string name="min_order_amount">Minimum rendelési összeg</string>
    <string name="estimated_delivery_time">Becsült kiszállítási idő</string>
    <string name="min_time">Minimum idő (perc)</string>
    <string name="max_time">Maximum idő (perc)</string>
    <string name="today_orders">Mai rendelések</string>
    <string name="today_revenue">Mai bevétel</string>
    <string name="total_orders">Összes rendelés</string>
    <string name="average_rating">Átlagos értékelés</string>
    <string name="order_accepted">Rendelés elfogadva</string>
    <string name="order_rejected">Rendelés elutasítva</string>
    <string name="order_ready">Rendelés elkészült</string>
    <string name="order_delivered">Rendelés kiszállítva</string>
    <string name="confirm_action">Megerősítés</string>
    <string name="confirm_reject_order">Biztosan elutasítod ezt a rendelést?</string>
    <string name="confirm_delete_item">Biztosan törlöd ezt az ételt?</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="cancel">Mégse</string>

    <!-- Rendelés sikeres képernyő -->
    <string name="order_success">Sikeres rendelés</string>
    <string name="order_success_title">Köszönjük a rendelésed!</string>
    <string name="order_success_message">A rendelésed sikeresen leadva. Hamarosan értesítjük a rendelésed állapotáról.</string>
    <string name="return_to_main">Vissza a főoldalra</string>

</resources>
