<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_large"
    android:background="@color/white">

    <TextView
        android:id="@+id/filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sort_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintTop_toBottomOf="@+id/filter_title"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/sort_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/sort_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_rating"
            android:checked="true" />

        <RadioButton
            android:id="@+id/sort_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_distance" />

        <RadioButton
            android:id="@+id/sort_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_price" />
    </RadioGroup>

    <TextView
        android:id="@+id/filter_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintTop_toBottomOf="@+id/sort_radio_group"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price_range_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_price_range"
        android:textSize="14sp"
        android:textColor="@color/textSecondary"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@+id/filter_by_label"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/price_range_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="10000"
        android:stepSize="500"
        app:values="@array/initial_price_range"
        app:layout_constraintTop_toBottomOf="@+id/price_range_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/min_rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_min_rating"
        android:textSize="14sp"
        android:textColor="@color/textSecondary"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@+id/price_range_slider"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/min_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="0"
        android:progressTint="@color/accent"
        app:layout_constraintTop_toBottomOf="@+id/min_rating_label"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintTop_toBottomOf="@+id/min_rating_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/reset_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_filters" />

        <Button
            android:id="@+id/apply_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply_filters"
            app:backgroundTint="@color/primary" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
